# Smart-Wheelchair-Main

./: .Makefile.swp  .dockerignore  .env (copy).example  .env.example  .gitignore  Dockerfile.ed  Dockerfile.external  Dockerfile.jetson  Dockerfile.jetson20  Dockerfile.pi  Dockerfile.sim  Makefile  README.md  Structure.md  keyboard.config  test.md  test.pgm
Zed_Multi_Cam/zed_rtabmap_two_cameras/launch/: zed_rtabmap.launch
arnie_description/: CMakeLists.txt  README.md  package.xml
arnie_description/launch/: amiga.launch  main.launch
arnie_description/robots/meshes/: back_wheel_left.STL  back_wheel_right.STL  base_link.STL  castor_back_right.STL  castor_front_left.STL  t265.stl  (+5 more)
arnie_localisation/: CMakeLists.txt  package.xml
arnie_localisation/launch/: main_robot.launch  rtabmap_mapping.launch  rtabmap_sensors.launch  sensor_interface.launch  sensor_interface_amiga.launch  sensor_interface_yumi.launch
arnie_main/: .gitignore  CMakeLists.txt  package.xml
arnie_main/launch/: main_external.launch  main_robot.launch
arnie_navigation/: CMakeLists.txt  package.xml
arnie_navigation/launch/: main_robot.launch
arnie_navigation/scripts/: robot_interface.py
aruco_detection/: CMakeLists.txt  package.xml
aruco_detection/src/: aruco_detection.py  my_pose_publisher.py  my_transform_publisher.py  set_pose.py
emotion/: CMakeLists.txt  package.xml
emotion/scripts/: cam_pub.py  deepface_script.py
emotion_detection/: CMakeLists.txt  package.xml  requirements.txt
emotion_detection/scripts/: cam_pub.py  deepface_script.py  deepface_ui.py
lilbilbo/: cam_pub.py  deepface_script.py  deepface_ui.py
map_provider/: package.xml
map_provider/launch/: map_provider.launch
map_provider/maps/: altermap_001.py  map.pgm  map.yaml
navigation/: CMakeLists.txt  package.xml
navigation/launch/: pi_interface.launch
navigation/scripts/: robot_interface.py
odom_fusion/robot_localization-noetic-devel/: README.md
path_planning/: CMakeLists.txt  package.xml
path_planning/config/: costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  room_dimensions.json  room_dimensions_2.json  trajectory_planner.yaml
path_planning/config-flex/: planner.yaml
path_planning/launch/: body_processing.launch  goal.launch  laser_path.launch  odom.launch  path_planning.launch  point_cloud_transform.launch  pose.launch
path_planning/map/: map.pgm  map.yaml
path_planning/scripts/: aruco_pose.py  baseline_experiment.py  body_processing.py  goal_processing.py  laser_path.py  map_generation.py  map_stitching.py  odom.py  path_planning.py  point_cloud_transform.py  pose.py
path_planning/src/: path_planning.py
people_msg/: CMakeLists.txt  package.xml
people_msg/msg/: People.msg  Person.msg
rnet_driver/: JoyClient.py  README.md
robot_main/: CMakeLists.txt  package.xml
robot_main/launch/: robot_main_external.launch
robot_main/rviz/: config.rviz
room_description/: CMakeLists.txt  package.xml
room_description/launch/: display.launch  gazebo.launch
room_description/urdf/: room_1.csv  room_1.urdf
room_gen/: CMakeLists.txt  package.xml
room_gen/meshes/: base_link.STL  room.stl
room_gen/scripts/: test.py
room_gen/urdf/: room.csv  room.urdf
simulation/: package.xml
social_predictions/: CMakeLists.txt  package.xml
social_predictions/launch/: social_predictions.launch  social_predictions_raw_zed.launch
social_predictions/src/: social_predictions.py  social_predictions_helper.py  social_predictions_raw_zed.py
test/: cube.stl
user_interface/: CMakeLists.txt  cert.pem  connect.py  key.pem  package.xml  start.sh  web_node.py
user_interface/launch/: user_interface.launch
user_interface/scripts/: connect.py  connect_withros.py  get_face.py  get_goal.py  user_interface.py
user_interface/scripts/image/: jeelizFaceFilter.js
user_interface/scripts/static/: main.html  main_ipad.html  styles.css  three.js  ui_n_face.js  ui_n_mesh.js  ui_n_video.js  webcam.js
user_interface/scripts/static/utils/: jeelizFaceFilter.module.js
user_interface/static/: stuff.js  thing1.html  ui_n_mesh.js  ui_n_video.js
vision/: .env  .env.example  Dockerfile-stage-1.ros  Dockerfile-stage-2.ros  README.md  build-ros-desktop-image.sh  ros_entrypoint.sh  run_ros_container.sh  start_ros_container.sh
vision/docker/: Dockerfile-stage-1.ros  Dockerfile-stage-2.ros  aruco.sh  build-ros-desktop-image.sh  common.yaml  single.launch  start.sh  zed.yaml  zed2.yaml  zed2i.yaml  zed_no_tf.launch  zedm.yaml
wheele_2dnav/: CMakeLists.txt  base_local_planner_params.yaml   costmap_common_params.yaml  global_costmap_params.yaml  package.xml
wheele_2dnav/launch/: move_base.launch  wheele_configuration.launch
wheele_description/: CMakeLists.txt  package.xml
wheele_description/config/: joint_names_wheelchair_3.yaml
wheele_description/launch/: display.launch  gazebo.launch
wheele_description/meshes/: back_left.STL  back_right.STL  base_link.STL  front_left.STL  front_left_wheel.STL  front_right.STL  front_right_wheel.STL  pivot_fl.STL  wheel_bl.STL  wheel_br.STL  wheel_fl.STL  wheel_fr.STL
wheele_description/urdf/: old.urdf  old_2.urdf  old_3.urdf  test_001.urdf  wheelchair_3.csv  wheelchair_3.urdf
wheele_gazebo/: CMakeLists.txt  package.xml
wheele_gazebo/launch/: wheele.launch
wheele_gazebo/models/: actor.sdf
wheele_gazebo/src/: actor_msg_maker.py
wheele_sim_control/: CMakeLists.txt  package.xml
wheele_sim_control/config/: wheele_control.yaml
wheele_sim_control/launch/: wheele_control.launch
zed_dummy/: CMakeLists.txt  package.xml
zed_dummy/launch/: zed_dummy.launch
zed_dummy/src/: dummy_detector.py
(+35 files in other folders)
