<?xml version="1.0"?>
<package format="2">
  <name>navigation</name>
  <version>0.0.1</version>
  <description>The navigation package</description>

  <maintainer email="personalrobotics.imperial@gmail.com">PRL</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  <depend>sensor_msgs</depend>

</package>
