<?xml version="1.0"?>
<package format="2">
  <name>path_planning</name>
  <version>0.0.1</version>
  <description>The path_planning node</description>

  <maintainer email="bjs3118@ic.ac.uk">PRL</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs.msg</depend>
  <depend>std_srvs</depend>
  <depend>tf</depend>
  <depend>people_msg</depend>

  <build_depend>zed_interfaces</build_depend> 
  
  <exec_depend>zed_interfaces</exec_depend>
  <exec_depend>zed_wrapper</exec_depend>


</package>
